Fixed footer columns, and fixed nav bar height on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,12 @@
 	margin-left: 5px;
 }
 
+@media only screen and (max-width: 40.063em){
+	.top-bar {
+		height: 2.5rem;
+}
+}
+
 @media only screen and (min-width: 40.063em) {
 	.top-bar {
 		height: 6rem;
